--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,40 @@
 }
 
 ul {
-  list-style-type: none;
-
+  
+  position: relative;
+  top: 25px;
+  font-family: ApercuMonoProBold;
 }
+
 
 li{
   color: white;
   text-decoration: none;
   display: inline;
   padding: 16px;
-
 }
+
+p {
+  color: rgb(196, 196, 196);
+}
+
+button {
+  background: linear-gradient(93.63deg, #B6FE46 5.68%, rgba(9, 254, 245, 0.6) 94.48%);
+  font-family: ApercuMonoProBold;
+  width: 149px;
+  height: 38px;
+  left: 43px;
+  top: 50px;
+  border-radius: 20px;
+  opacity: 0.8;
+}
+
+.font-face-gm {
+  font-family: "ApercuMonoProBold";
+ }
+
+
+
+
 
