--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@ ul {
   
   position: relative;
   top: 25px;
-  font-family: ApercuMonoProBold;
+  font-family: "ApercuMonoProMedium";
+  text-transform: uppercase;
 }
 
 
@@ -36,9 +37,39 @@ button {
   opacity: 0.8;
 }
 
+.bordered-button {
+  box-sizing: border-box;
+  width: 165px;
+  height: 54px;
+  left: 35px;
+  top: 42px;
+  border-radius: 30px;
+  
+}
+
+.buy-button {
+  width: 275.5px;
+  height: 76.5px;
+  left: 76px;
+  top: 69px;
+  
+  border: 4px solid #FFFFFF;
+  }
+
 .font-face-gm {
   font-family: "ApercuMonoProBold";
  }
+
+.menuline{
+  
+  width: 24px;
+  height: 0px;
+  left: 806px;
+  top: 67px;
+
+  border-left: 1px solid #FFFFFF;
+  transform: rotate(90deg);
+}
 
 
 
