--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,38 @@
 @font-face {
   font-family: "ApercuMonoProBold";
-  src: local("ApercuMonoProBold"),
-   url("./fonts/ApercuMonoProBold.ttf") format("truetype");
-  font-weight: bold;
-  }
+  src: local("ApercuMonoProBold"), url("./fonts/ApercuMonoProBold.ttf") format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "ApercuMonoProLight";
+  src: local("ApercuMonoProLight"), url("./fonts/ApercuMonoProLight.ttf") format("truetype");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "ApercuMonoProMedium";
+  src: local("ApercuMonoProMedium"), url("./fonts/ApercuMonoProMedium.ttf") format("truetype");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "ApercuMonoProRegular";
+  src: local("ApercuMonoProRegular"), url("./fonts/ApercuMonoProRegular.ttf") format("truetype");
+  font-weight: 400;
+}
 
 body {
   height: 100%;
   margin: 0;
-  font-family: ApercuMonoProBold;
+  font-family: ApercuMonoProRegular;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #000000 url("./img/background.png") no-repeat;
-  
+
 }
 
 code {
-  font-family: ApercuMonoProBold;
+  font-family: ApercuMonoProRegular;
 }
 
 .container {
   font-family: "Light";
 }
-
