--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 ul {
-  
   position: relative;
   top: 25px;
   font-family: "ApercuMonoProMedium";
@@ -15,7 +14,7 @@ ul {
 }
 
 
-li{
+li {
   color: white;
   text-decoration: none;
   display: inline;
@@ -54,19 +53,19 @@ button {
   top: 69px;
   
   border: 4px solid #FFFFFF;
-  }
+}
 
 .font-face-gm {
   font-family: "ApercuMonoProBold";
- }
+}
 
 .menuline{
-  
   width: 24px;
   height: 0px;
   left: 806px;
   top: 67px;
 
+  padding: 0px 16px 0px 16px;
   border-left: 1px solid #FFFFFF;
   transform: rotate(90deg);
 }
