--- a/src/App.css
+++ b/src/App.css
@@ -71,4 +71,10 @@ button {
 
 h1{
   color: aliceblue;
+  font-family: "ApercuMonoProBold";
+}
+
+h3{
+  color: aliceblue;
+  font-family: "ApercuMonoProBold";
 }
