--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,8 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: rgb(0, 0, 0) !important;
-  background: rgb(0, 0, 0);
+  background: rgb(0, 0, 0) url("./img/background.png") no-repeat;;
+  
   color: #eee;
 }
 
