--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   font-weight: 400;
 }
 
+html {
+  font-family: ApercuMonoProRegular;
+}
+
 body {
   height: 100%;
   margin: 0;
@@ -26,7 +30,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #000000 url("./img/background.png") no-repeat;
-
 }
 
 code {
