--- a/src/Router.css
+++ b/src/Router.css
@@ -150,7 +150,7 @@ header {
   position: absolute;
   min-width: 50px;
   height: 30px;
-  background-color: #3a4157;
+  /* background-color: #3a4157; */
   top: 36px;
   right: 20px;
   border-radius: 100px;
@@ -167,7 +167,7 @@ header {
   position: absolute;
   min-width: 50px;
   height: 30px;
-  background-color: #3a4157;
+  /* background-color: #3a4157; */
   top: 135px;
   right: 20px;
   border-radius: 100px;
