--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,22 @@ h3 {
   font-family: "ApercuMonoProMedium";
   text-transform: uppercase;
 }
+
+/* connectButton {
+  position:relative;
+  width: 100px;
+  height: 100px;
+  overflow:hidden;
+  background: #522d5b;
+  clip-path: polygon(
+    0 10%,
+    10% 0,
+    90% 0,
+    100% 10%,
+    100% 90%,
+    90% 100%,
+    10% 100%,
+    0% 90%,
+    0% 10%
+  )
+  } */
