--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ p {
   color: rgb(196, 196, 196);
 }
 
-button {
+/* button {
   background: linear-gradient(93.63deg, #B6FE46 5.68%, rgba(9, 254, 245, 0.6) 94.48%);
   font-family: "ApercuMonoProBold";
   width: 149px;
@@ -29,7 +29,7 @@ button {
   top: 50px;
   border-radius: 20px;
   opacity: 0.8;
-}
+} */
 
 .bordered-button {
   box-sizing: border-box;
