--- a/src/index.css
+++ b/src/index.css
@@ -152,3 +152,95 @@ a:visited {
 .ant-modal-close-icon:hover {
   color: white !important;
 }
+
+#about-page .title {
+  color: green;
+}
+
+ul {
+  position: relative;
+  /* top: 25px; */
+  font-family: "ApercuMonoProMedium";
+  text-transform: uppercase;
+}
+
+li {
+  color: white;
+  text-decoration: none;
+  display: inline;
+  padding: 16px;
+}
+
+p {
+  color: rgb(196, 196, 196);
+}
+
+/* button {
+  background: linear-gradient(93.63deg, #B6FE46 5.68%, rgba(9, 254, 245, 0.6) 94.48%);
+  font-family: "ApercuMonoProBold";
+  width: 149px;
+  height: 38px;
+  left: 43px;
+  top: 50px;
+  border-radius: 20px;
+  opacity: 0.8;
+} */
+
+.bordered-button {
+  box-sizing: border-box;
+  width: 165px;
+  height: 54px;
+  left: 35px;
+  top: 42px;
+  border-radius: 30px;
+
+}
+
+.buy-button {
+  width: 275.5px;
+  height: 76.5px;
+  left: 76px;
+  top: 69px;
+
+  border: 4px solid #FFFFFF;
+}
+
+.font-face-gm {
+  font-family: "ApercuMonoProBold";
+}
+
+.menuline {
+  width: 24px;
+  height: 0px;
+  left: 806px;
+  top: 67px;
+
+  padding: 0px 16px 0px 16px;
+  border-left: 1px solid #FFFFFF;
+  transform: rotate(90deg);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: aliceblue;
+  font-family: "ApercuMonoProMedium";
+  text-transform: uppercase;
+}
+
+/* connectButton {
+  position:relative;
+  width: 100px;
+  height: 100px;
+  overflow:hidden;
+  background: #522d5b;
+  clip-path: polygon(
+    0 10%,
+    10% 0,
+    90% 0,
+    100% 10%,
+    100% 90%,
+    90% 100%,
+    10% 100%,
+    0% 90%,
+    0% 10%
+  )
+  } */
